--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,39 +1,29 @@
-.row {
-	display: flex;
+.wrap {
+    display: block;
+    max-width: $fullWidth;
+    margin: 0 auto;
+}
+
+.col, .col-two, .col-three, .col-four {
+    float: left;
 }
 
 .col {
-	flex: 1;
+    width: 100%;
+    &-two {
+        width: 50%;
+    }
+    &-three {
+        width: 33%;
+    }
+    &-four {
+        width: 25%;
+    }
 }
 
-@media (max-width:48em) {
-	.row {
-		flex-direction: column;
-	}
-	
-	.col {
-		flex: 0 0 auto;
-	}
-}
-
-@media (min-width:48em) {
-	.col-tenth {
-		flex: 0 0 10%;
-	}
-	
-	.col-fifth {
-		flex: 0 0 20%;
-	}
-	
-	.col-quarter {
-		flex: 0 0 25%;
-	}
-	
-	.col-third {
-		flex: 0 0 33.3333334%;
-	}
-	
-	.col-half {
-		flex: 0 0 50%;
-	}
+@media screen and (max-width: 768px) {
+    .col, .col-two, .col-three, .col-four {
+        float: none;
+        width: 100%;
+    }
 }
